Fix remaining capitalization in Discovery Scripts section

--- a/index.html
+++ b/index.html
@@ -461,15 +461,15 @@
                     <ul class="space-y-2 text-sm text-gray-700 mb-6">
                         <li class="flex items-start">
                             <i data-feather="code" class="w-4 h-4 text-blue-500 mr-2 mt-1"></i>
-                            <span>GitHub Copilot Auditor</span>
+                            <span>GitHub Copilot auditor</span>
                         </li>
                         <li class="flex items-start">
                             <i data-feather="code" class="w-4 h-4 text-blue-500 mr-2 mt-1"></i>
-                            <span>Atlassian AI Feature Scanner</span>
+                            <span>Atlassian AI feature scanner</span>
                         </li>
                         <li class="flex items-start">
                             <i data-feather="code" class="w-4 h-4 text-blue-500 mr-2 mt-1"></i>
-                            <span>Microsoft 365 Copilot Checker</span>
+                            <span>Microsoft 365 Copilot checker</span>
                         </li>
                     </ul>
                     <div class="text-xs text-gray-500">
