--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 
                 <div class="bg-gray-50 p-8 rounded-xl shadow-lg hover:shadow-xl transition duration-300">
                     <div class="icon-box mb-6 mx-auto">
-                        <i data-feather="gavel" class="w-8 h-8 text-white"></i>
+                        <i data-feather="scale" class="w-8 h-8 text-white"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-3 text-gray-800">Ethics & Compliance</h3>
                     <p class="text-gray-600">Ensure AI systems align with ethical principles and regulatory requirements.</p>
@@ -367,7 +367,7 @@
             <div class="grid md:grid-cols-3 gap-8">
                 <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition duration-300">
                     <div class="icon-box mb-6 mx-auto">
-                        <i data-feather="shield-check" class="w-8 h-8 text-white"></i>
+                        <i data-feather="shield" class="w-8 h-8 text-white"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-3 text-gray-800">Regulatory Compliance</h3>
                     <p class="text-gray-600">Stay compliant with evolving AI regulations and standards like GDPR, AI Act, and industry-specific requirements.</p>
