Fix Ethics & Compliance icon: Use 'award' icon with inline styles for reliability
- Changed from 'scale' to 'award' (more reliable Feather icon)
- Added inline styles to ensure icon-box displays correctly
- Added double initialization of Feather icons for better reliability

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                 </div>
                 
                 <div class="bg-gray-50 p-8 rounded-xl shadow-lg hover:shadow-xl transition duration-300">
-                    <div class="icon-box mb-6 mx-auto">
-                        <i data-feather="scale" class="w-8 h-8 text-white"></i>
+                    <div class="icon-box mb-6 mx-auto" style="width: 64px; height: 64px; display: flex; align-items: center; justify-content: center;">
+                        <i data-feather="award" class="w-8 h-8 text-white" style="display: block;"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-3 text-gray-800">Ethics & Compliance</h3>
                     <p class="text-gray-600">Ensure AI systems align with ethical principles and regulatory requirements.</p>
