--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Hero Section -->
     <div class="hero-bg">
         <div class="hero-content">
-            <h1 class="text-5xl md:text-7xl font-bold mb-6 leading-tight text-white">Stop AI Features From Exposing Sensitive Data</h1>
+            <h1 class="text-5xl md:text-7xl font-bold mb-6 leading-tight text-white">Stop AI features from exposing sensitive data</h1>
             <p class="text-xl md:text-2xl mb-8 leading-relaxed text-white">GitHub Copilot. Atlassian Intelligence. They're rolling out overnight, often enabled by default. We give you the visibility and control to prevent a costly mistake.</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <a href="#tiers" class="bg-white hover:bg-gray-100 text-blue-600 px-8 py-4 rounded-lg font-medium transition duration-300 shadow-lg hover:shadow-xl">
